<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk1"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/lottiee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView3"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/fanos"
            tools:ignore="MissingConstraints" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/helal"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/helal"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/draw"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding"
        tools:layout_editor_absoluteY="700dp">

        <View
            android:id="@+id/view"
            android:layout_width="30dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@color/white" />


        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/medium_padding"
            android:paddingBottom="@dimen/medium_padding"
            android:text="@string/prayertimes"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amsak_time" />

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_04_09_am" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/black_300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fajer" />

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_04_39am"
                tools:ignore="Suspicious0dp" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/black_300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dhuhr" />

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_12_10_pm"
                tools:ignore="Suspicious0dp" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/black_300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/asr" />

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_03_38_pm" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/black_300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/draw">

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Maghrib" />

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_06_15_pm" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/black_300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/isha_a" />

            <TextView
                style="@style/prayer_Sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_07_45_pm" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>